arrumando o codigo do back sem deprecated